--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,9 @@
     "lodash": "^4.17.15",
     "vue": "^2.6.11",
     "vue-hot-reload-api": "^2.3.4",
-    "vue-router": "^3.1.6"
+    "vue-router": "^3.1.6",
+    "vue-socket.io": "^3.0.7",
+    "vuex": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
