Got game create and lobby working

--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "start-dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "clean": "rm dist/bundle.js",
