Add team names as dynamic across environments

--- a/client/.env.development
+++ b/client/.env.development
@@ -1,2 +1,8 @@
 VUE_APP_SOCKET_URL=http://localhost:3000
-VUE_APP_TIMER_LENGTH=5
+VUE_APP_TIMER_LENGTH=6
+VUE_APP_JOIN_NICKNAME=TOMMY2
+VUE_APP_CREATE_TEAM1_NAME="TEAM 1"
+VUE_APP_CREATE_TEAM2_NAME="TEAM 2"
+VUE_APP_CREATE_NUMBER_OF_CARDS=5
+VUE_APP_CREATE_NICKNAME=TOMMY
+VUE_APP_CREATE_TIMER_LENGTH=5
