--- a/server/package.json
+++ b/server/package.json
@@ -3,18 +3,31 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "start-dev": "DEBUG=game:* nodemon ./bin/www"
+    "start": "PORT=3000 node dist/src/server.js",
+    "start-dev": "DEBUG=game:* nodemon --config \"./nodemon.json\"/",
+    "watch-ts": "tsc -w",
+    "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run start-dev\""
   },
   "dependencies": {
+    "@types/node": "^13.13.5",
+    "awesome-typescript-loader": "^5.2.1",
+    "concurrently": "^5.2.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "errorhandler": "^1.5.1",
     "express": "~4.16.1",
+    "http": "0.0.1-security",
     "http-errors": "~1.6.3",
     "lodash": "^4.17.15",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.3",
     "socket.io": "^2.3.0",
+    "source-map-loader": "^0.2.4",
     "vuex": "^3.1.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.3",
+    "ts-node": "^8.10.1",
+    "tslint": "^6.1.2",
+    "typescript": "^3.8.3"
   }
 }
