--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "scripts": {
     "start": "PORT=3000 node dist/server.js",
-    "start-dev": "DEBUG=game:* nodemon --config \"./nodemon.json\"/",
+    "watch-node": "DEBUG=game:* nodemon --config \"./nodemon.json\"/",
     "watch-ts": "tsc -w",
-    "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run start-dev\""
+    "start-dev": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\""
   },
   "dependencies": {
     "@types/node": "^13.13.5",
